# memo

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md
00-cmake/: TensorRT.txt  cmake实战.md  拓展知识点.md
00-cmake/docs/: GVwiCAlL2biYLEkP.png!thumbnail  X74TytKWlvFw0Xst.png!thumbnail  evctgGcTbHyU1cVm.png!thumbnail  fCeDn3uR7Aeffvas.png!thumbnail  srnzrPDtnm75OZuv.png!thumbnail  uK5A6MiUUP6Ylf96.png!thumbnail  wbtoJSQAxXyl23X8.png!thumbnail
02-numba/gpu编程/: cuda1.py
03-pcl/: CMakeLists.txt  Day5 分割（平面拟合）.md  example_1.cpp  planar_segmentation.cpp  region_growing_segmentation.cpp  拓展 segmentation实例.md
03-pcl/Day 1/: CMakeLists.txt
03-pcl/Day6-7 配准/: Day 6 PCL配准概述 .md
03-pcl/【pcl点云库-分割】/: 欧式聚类.md
04-pyqt/: pty.py  pyqt使用清单.md
04-pyqt/01主窗口/: 01主窗口.py
04-pyqt/02显示图片/: img.py  img_ui.ui
04-pyqt/03分离界面与业务逻辑/: 分离界面与业务逻辑.py
04-pyqt/事件和信号/: 信号与槽函数的使用.py  处理耗时任务时保持窗口响应.py  工具栏和动作.py  打开文件.py  明确发送者.py  重写事件函数.py
04-pyqt/事件和信号/qpaint/: test01.py
04-pyqt/事件和信号/qthread/: main.py  test04.py
06-ros/00-【命令行】roslaunch/: roslaunch python API.md  test03.rviz
06-ros/00-【命令行】roslaunch/01-怎么写launch文件/: 怎么写launch文件.md
06-ros/00-【命令行】roslaunch/launch文件/: import_rviz.launch  launch_rviz.launch  pub_tf.launch  tf.launch
06-ros/01-【命令行】rosrun/src/: 用rosrun调用包中的程序.md
06-ros/05-ros自定义库/: README.md  setup.py
06-ros/05-ros自定义库/cv2_common_utils/: cv2_checkboard.py  cv2_common_uitls.py
06-ros/05-ros自定义库/python_common_utils.egg-info/: PKG-INFO  SOURCES.txt
06-ros/05-ros自定义库/ros_utils/: ros_sub_pub.py  test_lidar_node.py
06-ros/10.pluginlib/src/: nodelet_tutorial.launch  pluginlib.md  voxel_downsample.launch
06-ros/10.pluginlib/src/pluginlib_tutorials_/: CMakeLists.txt  package.xml  polygon_plugins.xml
06-ros/10.pluginlib/src/pluginlib_tutorials_/include/pluginlib_tutorials_/: polygon_base.h  polygon_plugins.h
06-ros/10.pluginlib/src/pluginlib_tutorials_/src/: polygon_loader.cpp  polygon_plugins.cpp
06-ros/11.命名/: 命名.md
06-ros/5.将rviz嵌入到qt中(python实现)/: rviz qt python api.md
06-ros/5.将rviz嵌入到qt中(python实现)/config/: qt.rviz
06-ros/6. ros环境导入别人的包/: ros环境下导入别人的包.md
06-ros/6. ros环境导入别人的包/catkin_ws/src/my_robot_common/: CMakeLists.txt  package.xml  setup.py
06-ros/6. ros环境导入别人的包/catkin_ws/src/my_robot_common/t2/: import_me_if_you_can.py
06-ros/7. 元包/: 构建元包.md
06-ros/7. 元包/src/t3/t3/: CMakeLists.txt  package.xml
06-ros/8. 动态配置/: dcfg.md
06-ros/9. 测试cpp的回调函数/: CMakeLists.txt  listener.cpp  rosbag.launch
06-ros/【rospy-debug】多线程知多少/: ros_sub_pub.py
07-cuda/: .gitmodules  基于cuda的向量加法.md
07-cuda/CUDA-by-Example-source-code-for-the-book-s-examples-/appendix_a/: lock.h
07-cuda/CUDA-by-Example-source-code-for-the-book-s-examples-/chapter04/: julia_gpu.cu
07-cuda/day1/: hello_world.cu
07-cuda/环境配置/docs/: Hp64XtNSvuB5QTG4.png!thumbnail
09-cfg/: ewrap  nnn.cfg  tmux.cfg  vimrc
10-sphinx/: .readthedocs.yaml
10-sphinx/source/: conf.py  index.rst  requirements.txt
10-sphinx/source/IDE笔记/: 01.vscode.md  01.vscode.rst  02.clion.md  02.clion.rst  03.pycharm.rst
10-sphinx/source/c++/: Q&A.md  c++语法.md  c++语法.rst  编译模型.md
10-sphinx/source/c++笔记/: 00.术语.rst  01.语法规则.rst  02.编译模型.rst  03.拓展工具.rst  04.案例分析.rst  05.Q&A.rst  容器.md  标准库.md  泛型算法.md  类型转换.md
10-sphinx/source/cmake笔记/: 01.语法规则.rst  02.catkin_make与catkin_tool实战.md
10-sphinx/source/github/: Hook应用：防止用不合法的邮箱进行commit.rst  实战.md
10-sphinx/source/git笔记/: 00.配置文档.md  01.实战.md  02.自定义git环境变量.md  03.有关commit的相关操作.md  有关commit的相关操作.md
10-sphinx/source/python笔记/: 01.第三方库.rst
10-sphinx/source/ros笔记/: 01.launch文件指北.rst  03.工具箱.md  04.实战.md  voxel_downsample.launch
10-sphinx/source/sphinx/: 01-rst语句块索引.rst  02-文档构建技巧.md  02-文档构建技巧.rst
10-sphinx/source/sphinx笔记/: 01.代码块.rst  02.拓展工具.rst  快速入门.rst
10-sphinx/source/ubuntu笔记/: 01.网络配置.md  02.实战.md  03.终端配置.md  04.窗口管理器配置.md  05.监控.md  06.文件和文件夹管理.md  07.用户和用户组配置.md  08.下载与安装.md
开发笔记/source/: conf.py  index.rst  requirements.txt
开发笔记/source/C++/: Advance.md  C++.md  Intermidiate.md  ProgrammingModel.md  STL.md  Tools.md
开发笔记/source/C++/example/built-library/: CMakeLists.txt  reinterpret_cast_example.cpp  signal_tutorial.cpp
开发笔记/source/CMake/: Beginner.md  CMakePractice.md  Grammar.md  Intermediate.md
开发笔记/source/DeepLearning/: AlchemistBook.md  CUDAPractice.md  EnvSetup.md  ONNXPractice.md  PytorchPractice.md  TensorRTPractice.md
开发笔记/source/Docker/: Docker.md  DockerPractice.md
开发笔记/source/Git/: Git.md  GitPractice.md
开发笔记/source/Go/: GoPractice.md
开发笔记/source/Hareware/: Camera.md
开发笔记/source/IDE/: JetBrains.md  Jetbrain.md  VSCode.md  Vscode.md  clion.md  pycharm.md  vscode.md
开发笔记/source/IDE笔记/: 01.vscode.md  01.vscode.rst  02.clion.md  03.pycharm.md
开发笔记/source/Javascript/: JsPractice.md
开发笔记/source/Math/: DL.md  InformationTheory.md  LinearAlgebra.md  MatrixAnalysis.md  RBF.md  Similarity.md  数字特征.md  数理统计.md  数理统计题目.md  概率论.md  (+1 more)
开发笔记/source/deep-learning/example/pytorch/CMakeLists-tutorial/: CMakeLists.txt  README.md  example-app.cpp
开发笔记/source/deep-learning/example/tensorrt/onnx2trt/: CMakeLists.txt  import_plan.cpp  onnx2trt.cpp  onnx2trt_record_time.cpp  onnx2trt_v1.cpp  onnx2trt_v2.cpp  pfe_baseline32000.onnx  show_onnx_input_output_shape.py
开发笔记/source/pointcloud/basic_c++_usage/: CMakeLists.txt  load_pointcloud.cpp
开发笔记/source/pointcloud/cluster_segmentation/: CMakeLists.txt  cluster_segmentation  cluster_segmentation.cpp  region_growing_segmentation.cpp
开发笔记/source/pointcloud/custom_point_type/: CMakeLists.txt  custom_point_type.cpp  setup.py
开发笔记/source/pointcloud/ground_segmentation/: CMakeLists.txt  ground_segmentation  ground_segmentation.cpp
开发笔记/source/pointcloud/ros_c_subcriber_publisher/src/: CMakeLists.txt  package.xml  subscriber_publisher.cpp
开发笔记/source/ros/example/custom_msg/msg_test01/: package.xml
开发笔记/source/ros/example/custom_msg/msg_test01/msg/: test01.msg
待整合/03-pcl/: Day 2 Kdtree.md  t1.cpp
待整合/04-pyqt/: myrviz.py  pyqt使用清单.md  qt使用清单.md  串口通讯.py
待整合/06-ros/: .gitignore
待整合/07-cuda/: python-numba API.md  术语.md  语法.md  问题集.md
待整合/08-cython/: file.ipynb
(+646 files in other folders)
