<?xml version="1.0"?>
<package format="2">
  <name>msg_test01</name>
  <version>0.0.0</version>
  <description>The msg_test01 package</description>

  <maintainer email="helios@todo.todo">helios</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
